--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "up": "taze major -I"
   },
   "dependencies": {
+    "@types/canvas-confetti": "^1.6.0",
     "@vueuse/core": "^9.6.0",
+    "canvas-confetti": "^1.6.0",
     "vue": "^3.2.45"
   },
   "devDependencies": {
